--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 
 
 //スマホ操作できるかの実験
-document.addEventListener('touchmove',e =>{
-      if(e.key === '') paddle.speed = -6;
-      if(e.key === 'ArrowRight') paddle.speed = 6;
-  });
-  document.addEventListener('touchend',()=> paddle.speed = 0);
+  //バーを動かします。
+  this.touchMove = function(e)
+  {
+    barObj.x = e.touch_x - 50;
+  }
   
       </script>
     </body>
