--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
            //このゲームで使用する画像の準備をします。
   ja.imageUnitObj.addEventListener("onLoad", this); //imageObjがonLoadされたらthisのonLoadを実行します。
   ja.imageUnitObj.load(["Image/Bg.png", "Image/block.png"]); //画像を読み込みます。
+          ja.stage.addChild(ja.imageUnitObj["Bg"]); //読み込んでおいた画像を表示させます。
            //タッチしたときの命令を追加します。
     ja.imageUnitObj["Bg"].addEventListener("touchUp", this);
     ja.imageUnitObj["Bg"].addEventListener("touchMove", this);
